[package]
name = "lox-macros"
version = "0.1.0"
authors = ["Suhas Hebbar <suhas.shripad.hebbar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"

[dependencies.syn]
version = "1.0"
features = ["extra-traits"]